zeit.cms changes
================

1.28.5 (unreleased)
-------------------


- Warnung bei parallelem Veröffentlichen wird korrekt ausgegeben (#6030).


1.28.4 (2009-08-19)
-------------------

- Related-Updater aktualisiert nur noch eine Ebene um »maximum recursion depth
  exceeded« zu verhindern (#6026).


1.28.3 (2009-08-18)
-------------------

- Kompatibilität zu Python 2.6


1.28.2 (2009-08-18)
-------------------

- Asset-Badges im CMS-Skin versteckt.


1.28.1 (2009-08-17)
-------------------

- XML-RPC für Workflow gibt bei publish und retract die Job-Id zurück
  (für #5661).

- SubPageForm sended after-reload auch beim Form-Post.

- JSON-Views für publish und um den Status von Jobs abzufragen hinzugefügt
  (#5661).

1.28 (2009-08-14)
-----------------

- Schönere Anzeige von Checkboxen (CMS-Skin und Vivi-Skin).

- Date-Last-Modified, Last-Semantic-Change, Date-First-Released und
  Date-Last-Published zur XML-Referenz hinzugefügt (#5965).

Technisches
+++++++++++

- AddableCMSContentTypeSource hinzugefügt (#5937).

- checkout/checkin-View neuer Parameter redirect=False für JavaScript (#5661).

1.27 (2009-08-10)
-----------------

- Markierungen für Inline-Assets (#5770).

- WebDAV-Metadaten werden in das XML des Link-Objekts kopiert (#5904).

- »Banner« in die Standardmetadaten (bisher nur bei Artikel, #5931).

- Schönere Anzeige für Checkboxen in Metadaten (Vivi).

- Panels in der Sidebar werden wieder vollständig angeeigt (Vivi, #5840).

Technisches
+++++++++++

- Basisklasse für Adapter, die WebDAVPropertys brauchen.

- SubPageForm wurde von LightboxForm abgespalten (für #5937).

- Die TypeDeclaration enthält den Namen des Add-Forms (für #5937).

1.26.1 (2009-08-04)
-------------------

- DragAndDrop im Clipboard funktioniert wieder.

- Objektauswahl-Lightbox funktioniert wieder.

1.26 (2009-08-03)
-----------------

- Neues Feld »Product-Id« in den Standardmetadaten (#5819).

- printRessort als CommonMetadata hinzugefügt.

1.25 (2009-07-28)